--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-webcam": "^5.0.0",
     "rxjs": "^6.5.4",
     "yup": "^0.28.1"
   },
