--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config": "^3.2.6",
     "formik": "^2.1.4",
     "history": "^4.10.1",
+    "mdbreact": "^4.25.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-validation": "^0.1.11",
